Fix nonalignmented of region elements

--- a/main_app/static/css/main.css
+++ b/main_app/static/css/main.css
@@ -319,6 +319,10 @@ footer > .wrapper{
         grid-column: span 2;
     }
 
+    .region{
+        justify-content: center;
+    }
+
   }
 
   /* Styles for screens smaller than 690px */
